Add missing prereqs (excluding maint/)

--- a/dist.ini
+++ b/dist.ini
@@ -41,3 +41,8 @@ JSON = 2.53
 File::HomeDir = 0
 Config::Any = 0
 YAML = 0
+File::pushd = 0
+FindBin = 0
+Scalar::Util = 0
+Term::ExtendedColor = 0
+Time::HiRes = 0
