Put MetaYAML back in dist

--- a/dist.ini
+++ b/dist.ini
@@ -6,9 +6,7 @@ version          = 2.001004
 
 [NextRelease]
 [@Git]
-[@Filter]
-bundle = @Basic
-remove = MetaYAML
+[@Basic]
 
 [MetaResources]
 repository.url = git://github.com/frioux/app-adenosine.git
