--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ version          = 2.001005
 repository.url = git://github.com/frioux/app-adenosine.git
 repository.web = http://github.com/frioux/app-adenosine
 repository.type = git
+bugtracker.web  = http://github.com/frioux/app-adenosine/issues
 
 [MetaJSON]
 [PodWeaver]
