use OurPkgVersion for more predictable output

--- a/dist.ini
+++ b/dist.ini
@@ -16,7 +16,7 @@ bugtracker.web  = http://github.com/frioux/app-adenosine/issues
 
 [MetaJSON]
 [PodWeaver]
-[PkgVersion]
+[OurPkgVersion]
 [ReadmeFromPod]
 filename = bin/adenosine
 
