switch to githubmeta

--- a/dist.ini
+++ b/dist.ini
@@ -7,12 +7,8 @@ version          = 2.001006
 [NextRelease]
 [@Git]
 [@Basic]
-
-[MetaResources]
-repository.url = git://github.com/frioux/app-adenosine.git
-repository.web = http://github.com/frioux/app-adenosine
-repository.type = git
-bugtracker.web  = http://github.com/frioux/app-adenosine/issues
+[GithubMeta]
+issues = 1
 
 [MetaJSON]
 [PodWeaver]
