switch to cpanfile

--- a/dist.ini
+++ b/dist.ini
@@ -21,25 +21,4 @@ filename = bin/adenosine
 [PruneFiles]
 match = ^maint/
 
-[Prereqs]
-File::Temp = 0
-Capture::Tiny = 0
-URI = 0
-Getopt::Long  = 0
-File::Path = 0
-URI::Escape = 0
-File::Spec::Functions = 0
-Path::Class = 0.26
-Text::ParseWords = 0
-Test::More = 0
-Test::Deep = 0
-Module::Runtime = 0
-Moo = 1.000006
-JSON = 2.53
-File::HomeDir = 0
-Config::Any = 0
-YAML = 0
-File::pushd = 0
-FindBin = 0
-Scalar::Util = 0
-Time::HiRes = 0
+[Prereqs::FromCPANfile]
