--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ perl:
 
 install:
    - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
-   - sudo apt-get -y install bc
-   - cpanm --quiet --notest Devel::Cover Config::INI::Reader
-   - perl -MConfig::INI::Reader -E 'say join " ", keys %{Config::INI::Reader->read_file("dist.ini")->{Prereqs}}' | cpanm --quiet --notest
+   - cpanm --quiet --notest Devel::Cover::Report::Coveralls
+   - cpanm --quiet --notest --installdeps .
 
 script:
    - PERL5OPT=-MDevel::Cover=-coverage,statement,branch,condition,path,subroutine prove -lrsv t
    - cover
-   - test "$(echo "$(cover -summary 2>/dev/null | tail -n6 | head -n1 | perl -pi -e '$_ = (split /\s+/)[5]') >= 85" | bc)" -ne 0
+after_success:
+  - cover -report coveralls
